--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,36 +1,29 @@
- <p id="notice"></p>
- <h2>User info</h2>
-
- <%= image_tag user.get_profile_image(100,100) %>
-
-
-
- <table class='table table-hover table-inverse'>
+<p id="notice"></p>
+<h2>User info</h2>
+<%= image_tag user.get_profile_image(100,100) %>
+<table class='table table-hover table-inverse'>
  <tr>
   <td>name</td>
-   <td><%= user.name %></td>
-   </tr>
+  <td><%= user.name %></td>
+  </tr>
   <tr>
    <td>introduction</td>
    <td><%= user.introduction %></td>
    </tr>
    </table>
-
-  <div class='row'>
-   <td>
+   <div class="row">
     <%= link_to edit_user_path(user) do %>
-     <i class="fas fa-user-cog"></i>
-    <% end %>
-   </td>
-  </div>
+    </div>
+    <div class="btn btn-outline-secondary btn-block edit_user_path(user)" href="edit_user_path(user)">
+     <i class="fas fa-user-cog"></i></div>
+     <% end %>
+     <h2>New book</h2>
+     <%= form_with model:book do |f| %>
+     <h6>Title</h6>
+     <%= f.text_field :title %>
+     <h6>Opinion</h6>
+     <%= f.text_area :body %>
+     <%= f.submit "Create Book" %>
+     <% end %>
 
-
-    <h2>New book</h2>
-    <%= form_with model:book do |f| %>
-    <h6>Title</h6>
-    <%= f.text_field :title %>
-    <h6>Opinion</h6>
-    <%= f.text_area :body %>
-    <%= f.submit "Create Book" %>
-    <% end %>
 
