--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,113 +1,76 @@
-
-
-   <h2>メッセージの投稿</h2>
-
-<%= form_for(@book) do |f|%>
-<%= render 'layouts/error_messages', model: f.object %>
+<h2>メッセージの投稿</h2>
+<%= form_for(@book) do |f| %>
+<%= render "layouts/error_messages", model: f.object %>
 <div class="form-group">
-<%= f.label :title %>
-<%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
 </div>
-
 <div class="form-group">
-<%= f.label :content %>
-<%= f.text_area :content %>
+  <%= f.label :content %>
+  <%= f.text_area :content %>
 </div>
-
 <%= f.submit "投稿する", class: "btn-primary" %>
-
 <% end %>
 <h1>User info</h1>
-
- <table>
+<table>
   <thead>
-
-  <tr>
-  <th>name</th>
-
-  </tr>
-  <th>introduction</th>
-  <th colspan="3"></th>
-
+    <tr>
+      <th>name</th>
+    </tr>
+    <th>introduction</th>
+    <th colspan="3"></th>
   </thead>
-
 </table>
-
 <div class='row'>
   <a class="btn btn-secondary btn-lg edit_user_2" href="/users/2/edit">
     <i class="fas fa-user-cog"></i>
-</a></div>
-
-
+  </a>
+</div>
 <h1>New book</h1>
-
-
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
-
-
-  <h4>title</h4>
-  <%= f.text_field:title %>
-  <h4>body</h4>
-  <%= f.text_area:body %>
-  <p><%= f.submit 'Create Book' %></p>
+<%= form_with model: @book, url: "/books", method: :post do |f| %>
+<h4>title</h4>
+<%= f.text_field :title %>
+<h4>body</h4>
+<%= f.text_area :body %>
+<p><%= f.submit "Create Book" %></p>
 <% end %>
-
-
-
-  <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-      <table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th></th>
-      <th>Opinion</th>
-
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-<tr>
-
-  <% @books.each do |book| %>
-
-  <% end %>
-
-  <td><%= @book.body %></td>
- <td><%= link_to "Show", new_book_path(books.new.id)%>
-  </td>
-
-  </tr>
-
-
-</tbody>
-</table>
-
-
-
-
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col">Title</th>
-      <th scope="col">Opinion</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row"></th>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td colspan="2"></td>
-
-    </tr>
-  </tbody>
-</table>
+<div class='col-md-8 offset-md-1'>
+  <h2>Books</h2>
+  <table class='table table-hover table-inverse'>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th></th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <% @books.each do |book| %>
+        <% end %>
+        <td><%= @book.body %></td>
+        <td><%= link_to "Show", new_book_path(books.new.id) %></td>
+      </tr>
+    </tbody>
+  </table>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">Title</th>
+        <th scope="col">Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row"></th>
+        <td></td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td colspan="2"></td>
+      </tr>
+    </tbody>
+  </table>
