--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,93 +3,81 @@
     <title>Bookers2</title>
     <body>
       <header>
-  <body>
- 
- 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-       <%= link_to root_path, class: "nav-link text-light", method: :get do %>
-             <span>Bookers</span>
-            <% end %>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-     <div class="collapse navbar-collapse"id="navbarNavDropdown">
-       <ul class="navbar-nav ml-auto"></ul>
-         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container">
-           
-            <li class="navbar-nav ml-auto">
-              <% if user_signed_in? %>
-              <%= link_to user_path(current_user.id), class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-home"></i>Home
-              </li>
-              <% end %>
-              <%= link_to users_path, class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-users"></i>Users
-              <% end %>
-              <%= link_to books_path, class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-book-open"></i>Books
-              <% end %>
-              <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %>
-              <i class="fas fa-sign-out-alt"></i>Log out
-              <% end %>
-              <% else %>
+        <body>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
               <%= link_to root_path, class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-home"></i>Home
+              <span>Bookers</span>
               <% end %>
-              <%= link_to about_path, class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-link"></i>About
-              <% end %>
-              <%= link_to new_user_registration_path, class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-user-plus"></i>Sign up
-              <% end %>
-              <%= link_to new_user_session_path, class: "nav-link text-light", method: :get do %>
-              <i class="fas fa-sign-in-alt"></i>Log in
-              <% end %>
-              <% end %>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse"id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto"></ul>
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                  <div class="container">
+                    <li class="navbar-nav ml-auto">
+                      <% if user_signed_in? %>
+                      <%= link_to user_path(current_user.id), class: "nav-link text-light", method: :get do %>
+                      <i class="fas fa-home"></i>Home
+                    </li>
+                        <% end %>
+                      <%= link_to users_path, class: "nav-link text-light", method: :get do %>
+                      <i class="fas fa-users"></i>Users
+                        <% end %>
+                      <%= link_to books_path, class: "nav-link text-light", method: :get do %>
+                      <i class="fas fa-book-open"></i>Books
+                        <% end %>
+                      <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %>
+                      <i class="fas fa-sign-out-alt"></i>Log out
+                        <% end %>
+                          <% else %>
+                          <%= link_to root_path, class: "nav-link text-light", method: :get do %>
+                          <i class="fas fa-home"></i>Home
+                              <% end %>
+                            <%= link_to about_path, class: "nav-link text-light", method: :get do %>
+                            <i class="fas fa-link"></i>About
+                              <% end %>
+                            <%= link_to new_user_registration_path, class: "nav-link text-light", method: :get do %>
+                            <i class="fas fa-user-plus"></i>Sign up
+                              <% end %>
+                              <%= link_to new_user_session_path, class: "nav-link text-light", method: :get do %>
+                              <i class="fas fa-sign-in-alt"></i>Log in
+                                <% end %>
+                                  <% end %>
+                  </div>
               </div>
-              </div>
-              </div>
-              </nav>
-              </header>
-              </body>
-              </html>
-              <p id="notice"><%= notice %></p>
-              <%= yield %>
-              </head>
-               
-              
-                <head>
-                  <%= csrf_meta_tags %>
-                  <%= csp_meta_tag %>
-                  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
-                  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-                  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-                  
-                  </head>
-                  <body>
-                    <main>
-                      <div class='container px-5 px-sm-0'>
-                        <div class='row'>
-                          <div class='col-md-3'>
-                            
-                          </main>
-                          <footer>
-                            <div class='container mt-5'>
-                              <div class='row'>
-                                <div class='mx-auto'>
-                                  <p>CopyRight Infratop.inc</p>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </footer>
-                                  </body>
-                                  </div>
-                                  </div>
-                                  </div>
-                                      
-                                        
-                                        
-                                        
-                              
+            </div>
+                </nav>
+      </header>
+        </body>
+</html>
+<p id="notice"><%= notice %></p>
+<%= yield %>
+  </head>
+  <head>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
+    <%= stylesheet_pack_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
+    <!--<%# = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>-->
+  </head>
+  <body>
+    <main>
+      <div class='container px-5 px-sm-0'>
+        <div class='row'>
+          <div class='col-md-3'>
+    </main>
+  <footer>
+    <div class='container mt-5'>
+      <div class='row'>
+        <div class='mx-auto'>
+          <p>CopyRight Infratop.inc</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  </body>
+          </div>
+        </div>
+      </div>
